Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75287

Camera example (widgets) does not record video

    XMLWordPrintable

Details

    • macOS
    • f252ad92526c73c4df05798a4ab699853908edc2 (qt/qtmultimedia/5.12)

    Description

      Pressing the "Record" button just leads to a label "Recorded <very negative number with very large absolute value> s", but no recording.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes