AVFoundation: Fix sending proper state in QMediaRecorder

Need to send the state if it has been applied.
Currently it happens when Recording is requested.
If Stopped is requested, the state will be changed in handleRecordingFinished callback.

Change-Id: I6911f2cebb2d1cc8a08eee17e7b91654b5d6e4c7
Fixes: QTBUG-75287
Reviewed-by: Andy Shaw <andy.shaw@qt.io>